# itmo_recsys

./: main.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
notebooks/hw_2/: metrics.ipynb
notebooks/hw_3/: knn.ipynb
notebooks/hw_4/: mf.ipynb
notebooks/hw_5/: hw_5.ipynb
service/api/: views.py
service/recsys_models/: knn_model.py  models.py
tests/api/: test_views.py
